Fixed text clipping on h3 font in pages

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -55,7 +55,7 @@
 }
 .handpicked-footer-links {
   background: $mid-gray;
-  padding-top: 10px;
+  padding: 10px 0px;
 }
 .footer-space {
   margin-top: 20px;
